# gtktasks

./: pyproject.toml
app/: main.py
docs/: TODO.md
