[project]
name = "tasks"
version = "0.8.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pycairo>=1.27.0",
    "pygobject>=3.50.0",
    "setuptools>=75.6.0",
    "wheel>=0.45.1",
]

[project.scripts]
tasks = "app.main:start"  # Entry point: `main` function in `app/main.py`

[tool.uv.workspace]
members = ["tasks"]

